--- a/bower.json
+++ b/bower.json
@@ -4,15 +4,16 @@
   "dependencies": {
     "modernizr": "2.8.x",
     "angular": "1.3.x",
-    "jquery" : "2.x.x",
-    "angular-route" : "1.3.x",
-    "bootstrap-sass-official" : "3.2.x"
+    "jquery": "2.x.x",
+    "angular-route": "1.3.x",
+    "bootstrap-sass-official": "3.2.x",
+    "angularfire": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
   },
   "resolutions": {
     "angular": "1.3.x",
-    "jquery" : "2.x.x"
+    "jquery": "2.x.x"
   }
 }
