--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angularfire": "~0.9.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.x"
+    "angular-mocks": "1.3.x",
+    "jquery-ui": "~1.11.2"
   },
   "resolutions": {
     "angular": "1.3.x",
