--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery": "2.x.x",
     "angular-route": "1.3.x",
     "bootstrap-sass-official": "3.2.x",
-    "angularfire": "~0.9.0"
+    "angularfire": "~0.9.0",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x",
